# AwareLiquid-M2

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  submit.py
awareliquid/: __init__.py  evidence.py  formal_reasoning.py
awareliquid/adapter/: __init__.py  afac_contract.py  answer_parsing.py  calculation.py  chunker.py  code_exec.py  compressor.py  contracts.py  evidence_coverage.py  evidence_index.py  hybrid.py  qa_agent.py  qwen_client.py  schemas.py  submission_contract.py
awareliquid/memory/: __init__.py  encoder.py  knowledge_store.py  lexical_store.py
benchmarks/: bench_adapter.py  bench_token_cost.py
docs/: ARCHITECTURE.md
docs/plans/: 2026-07-18-afac-compliant-qa.md
evals/: questions.jsonl  run_eval.py
evals/corpus/: annual_2024.md  annual_2025.md  bond_prospectus.md  insurance_hengtai.md  insurance_shouxin.md  regulatory_aml.md  research_robotics.md
examples/: eval_accuracy.py  run_qa.py  sample_docs.json  sample_questions.jsonl
scripts/: test.sh
tests/: conftest.py  test_afac_contract.py  test_agent.py  test_chunker.py  test_code_exec.py  test_compressor.py  test_contracts_m0.py  test_eval_set.py  test_evidence.py  test_evidence_index.py  test_formal_reasoning.py  test_hybrid.py  test_lexical_store.py  test_multi_query.py  test_polarity.py  test_qwen_client.py  test_schemas.py  test_self_consistency.py  test_submission_contract.py  test_submit.py
tests/fixtures/: afac_m0_synthetic_golden.json  evidence_synthetic.json  synthetic_golden.json
(+2 files in other folders)
