[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awareliquid"
version = "0.1.0"
description = "A memory-compression adapter for Qwen: long-document QA with minimal generation tokens."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AwareLiquid contributors" }]
keywords = ["qwen", "adapter", "long-context", "memory", "retrieval", "rag", "compression"]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
include = ["awareliquid*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
